--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -1,8 +1,69 @@
 {
+	"and": "和",
+	"auth": {
+		"agreement-notice": "登入或註冊即代表你同意我們的",
+		"confirm-password": "確認密碼",
+		"confirm-your-password": "請再輸入一次密碼",
+		"email": "電子郵件",
+		"invitation-code": "邀請碼",
+		"login": "登入",
+		"password": "密碼",
+		"passwords-do-not-match": "密碼不相符",
+		"please-fill-in-username-and-password": "請填寫使用者名稱及密碼",
+		"register": "註冊",
+		"username": "使用者名稱",
+		"your-email": "輸入電子郵件地址",
+		"your-invitation-code": "輸入邀請碼",
+		"your-password": "輸入密碼",
+		"your-username": "輸入使用者名稱"
+	},
+	"copied-to-clipboard": "已複製至剪貼簿",
+	"copy": "複製",
+	"course": {
+		"course-type": "課程類別",
+		"courses": "課程",
+		"ex-computer-programming": "例如：程式設計",
+		"instructors": "授課講師",
+		"name": "課程名稱",
+		"programs": "課程計畫",
+		"providers": "授課機構",
+		"relevance": "相關性",
+		"search-courses": "課程搜尋",
+		"search-for": "包含",
+		"sort-by": "排序方式",
+		"what-are-you-looking-for": "你想找什麼呢？"
+	},
+	"home": {
+		"active-users": "活躍使用者",
+		"featured": "精選：{title}",
+		"from-over-n-schools": "來自 {n} 所學校",
+		"total-courses": "課程總數",
+		"total-posts": "文章總數"
+	},
+	"import": "匯入",
+	"invitations": "邀請碼",
+	"logout": "登出",
+	"me": {
+		"confirming-email": "驗證電子郵件來完成註冊",
+		"import-course-pack": "匯入 Course Pack",
+		"logged-in-as": "以 <b>{user}</b> 的身份登入。",
+		"management": "管理",
+		"mint-invitation": "建立邀請碼",
+		"nice-to-see-you": "很高興見到你，{user}！",
+		"pick-a-course-pack": "選擇一個 Course Pack 檔案來上傳",
+		"roles": "角色：",
+		"upload-a-course-pack-to-import-it-into-the-system": "上傳 Course Pack 並匯入至 UniCourse 系統。"
+	},
 	"nav": {
 		"course": "課程",
 		"forum": "論壇",
 		"login": "登入",
 		"me": "帳號"
-	}
+	},
+	"please-fill-in-all-fields": "請填寫所有欄位",
+	"privacy-policy": "隱私權政策",
+	"search": "搜尋",
+	"tos": "服務條款",
+	"unknown-error": "未知錯誤",
+	"wip": "我們正在努力開發此功能，請持續關注！"
 }
