--- a/locales/en.json
+++ b/locales/en.json
@@ -31,7 +31,13 @@
 		"search-courses": "Search Courses",
 		"search-for": "Search for",
 		"sort-by": "Sort by",
-		"what-are-you-looking-for": "What are you looking for?"
+		"what-are-you-looking-for": "",
+		"what-class-are-you-looking-for": "",
+		"what-course-are-you-looking-for": "What course are you looking for?"
+	},
+	"forum": {
+		"what-article-are-you-looking-for": "What article are you looking for?",
+		"ex-great-course-recommendations": "Ex. Great course recommendations"
 	},
 	"home": {
 		"active-users": "Active Users",
