--- a/locales/en.json
+++ b/locales/en.json
@@ -31,13 +31,20 @@
 		"search-courses": "Search Courses",
 		"search-for": "Search for",
 		"sort-by": "Sort by",
-		"what-are-you-looking-for": "",
-		"what-class-are-you-looking-for": "",
 		"what-course-are-you-looking-for": "What course are you looking for?"
 	},
 	"forum": {
+		"search-articles": "Search Articles",
 		"what-article-are-you-looking-for": "What article are you looking for?",
-		"ex-great-course-recommendations": "Ex. Great course recommendations"
+		"ex-great-course-recommendations": "Ex. Great course recommendations",
+		"type": "Type",
+		"announcement": "Announcement",
+		"article": "Article",
+		"question": "Question",
+		"sort-by": "Sort by",
+		"relevance": "Relevance",
+		"newest": "Newest",
+		"hot": "Hot"
 	},
 	"home": {
 		"active-users": "Active Users",
