--- a/locales/en.json
+++ b/locales/en.json
@@ -63,7 +63,10 @@
 		"course": "Course",
 		"forum": "Forum",
 		"login": "Login",
-		"me": "Me"
+		"me": "Me",
+		"settings": "Settings",
+		"profile": "Profile",
+		"profile-settings": "Profile Settings"
 	},
 	"please-fill-in-all-fields": "Please fill in all fields",
 	"privacy-policy": "Privacy Policy",
