feat: make invitation optional

--- a/locales/en.json
+++ b/locales/en.json
@@ -13,7 +13,7 @@
 		"register": "Register",
 		"username": "Username",
 		"your-email": "Your email",
-		"your-invitation-code": "Your invitation code",
+		"your-invitation-code": "Your invitation code (optional)",
 		"your-password": "Your password",
 		"your-username": "Your username"
 	},
