--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -13,7 +13,7 @@
 		"register": "註冊",
 		"username": "使用者名稱",
 		"your-email": "輸入電子郵件地址",
-		"your-invitation-code": "輸入邀請碼",
+		"your-invitation-code": "輸入邀請碼（選填）",
 		"your-password": "輸入密碼",
 		"your-username": "輸入使用者名稱"
 	},
